--- a/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +161,7 @@
        "576"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "0                      576"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "0                     179           3.05                  780        2379.77"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "Other / Non-Disclosed           11               0.019097"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
     "#unique_values\n",
     "gender = unique_values[\"Gender\"].value_counts()\n",
     "total_players = unique_values[\"Gender\"].count()\n",
-    "player_percentage =  / total_players\n",
+    "player_percentage = gender / total_players\n",
     "gender_demographics = pd.DataFrame({\"Total Count\": gender, \"Percentage of Players\": player_percentage})\n",
     "gender_demographics"
    ]
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "Other / Non-Disclosed                 50.19                            4.56  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -938,8 +938,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40+</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.008681</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.020833</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -954,17 +954,17 @@
        "25-29           77               0.133681\n",
        "30-34           52               0.090278\n",
        "35-39           31               0.053819\n",
-       "40+              5               0.008681"
+       "40+             12               0.020833"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Create the bins\n",
-    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 40]\n",
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 45]\n",
     "#Create the names for the bins\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
     "#Categorize players through age bins \n",
@@ -1114,7 +1114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # gender_purchase[\"Age Groups\"] = pd.cut(HeroesOfPymoli_data[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
+    "# purchasing_analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1142,11 +1152,9 @@
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "      <th>Avg. Purchase total per person</th>\n",
-       "      <th>Age Groups</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
+       "      <th>Age Groups</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1155,61 +1163,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>113</td>\n",
-       "      <td>3.20</td>\n",
-       "      <td>361.94</td>\n",
-       "      <td>4.47</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>652</td>\n",
-       "      <td>3.02</td>\n",
-       "      <td>1967.64</td>\n",
-       "      <td>4.07</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>15</td>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
        "      <td>3.35</td>\n",
-       "      <td>50.19</td>\n",
-       "      <td>4.56</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>77.13</td>\n",
+       "      <td>4.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>82.78</td>\n",
+       "      <td>3.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>136</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>412.89</td>\n",
+       "      <td>3.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>365</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>1114.06</td>\n",
+       "      <td>4.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>293.00</td>\n",
+       "      <td>3.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>214.00</td>\n",
+       "      <td>4.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>147.67</td>\n",
+       "      <td>4.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>38.24</td>\n",
+       "      <td>3.19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Purchase Count  Average Purchase Price  \\\n",
-       "Gender                                                          \n",
-       "Female                            113                    3.20   \n",
-       "Male                              652                    3.02   \n",
-       "Other / Non-Disclosed              15                    3.35   \n",
+       "            Purchase Count  Average Purchase Price  Total Purchase Value  \\\n",
+       "Age Groups                                                                 \n",
+       "<10                     23                    3.35                 77.13   \n",
+       "10-14                   28                    2.96                 82.78   \n",
+       "15-19                  136                    3.04                412.89   \n",
+       "20-24                  365                    3.05               1114.06   \n",
+       "25-29                  101                    2.90                293.00   \n",
+       "30-34                   73                    2.93                214.00   \n",
+       "35-39                   41                    3.60                147.67   \n",
+       "40+                     13                    2.94                 38.24   \n",
        "\n",
-       "                       Total Purchase Value  Avg. Purchase total per person  \\\n",
-       "Gender                                                                        \n",
-       "Female                               361.94                            4.47   \n",
-       "Male                                1967.64                            4.07   \n",
-       "Other / Non-Disclosed                 50.19                            4.56   \n",
-       "\n",
-       "                      Age Groups  \n",
-       "Gender                            \n",
-       "Female                       NaN  \n",
-       "Male                         NaN  \n",
-       "Other / Non-Disclosed        NaN  "
+       "            Avg. Purchase total per person  \n",
+       "Age Groups                                  \n",
+       "<10                                   4.54  \n",
+       "10-14                                 3.76  \n",
+       "15-19                                 3.86  \n",
+       "20-24                                 4.32  \n",
+       "25-29                                 3.81  \n",
+       "30-34                                 4.12  \n",
+       "35-39                                 4.76  \n",
+       "40+                                   3.19  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchasing_analysis[\"Age Groups\"] = pd.cut(HeroesOfPymoli_data[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
-    "purchasing_analysis"
+    "age_purchase = HeroesOfPymoli_data.loc[:, [\"SN\", \"Age\", \"Age Groups\", \"Price\"]]\n",
+    "grouped_age = age_purchase.groupby(\"Age Groups\")\n",
+    "purchase = grouped_age.count()[\"Price\"]\n",
+    "average_purchase = round(grouped_age.mean()[\"Price\"], 2)\n",
+    "total_value = grouped_age.sum()[\"Price\"]\n",
+    "average_total = round((total_value / group_total), 2)\n",
+    "age_data = pd.DataFrame({\"Purchase Count\": purchase, \"Average Purchase Price\": average_purchase, \n",
+    "                                   \"Total Purchase Value\": total_value, \"Avg. Purchase total per person\": average_total})\n",
+    "age_data"
    ]
   },
   {
@@ -1379,6 +1430,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lisosia93</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>18.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idastidru52</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>15.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chamjask73</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iral74</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iskadarya95</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.37</td>\n",
+       "      <td>13.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count  Average Purchase Price  Total Purchase Value\n",
+       "SN                                                                       \n",
+       "Lisosia93                 5                    3.79                 18.96\n",
+       "Idastidru52               4                    3.86                 15.45\n",
+       "Chamjask73                3                    4.61                 13.83\n",
+       "Iral74                    4                    3.40                 13.62\n",
+       "Iskadarya95               3                    4.37                 13.10"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_sn = age_purchase.groupby(\"SN\")\n",
+    "sn_purchase = grouped_sn.count()[\"Price\"]\n",
+    "sn_average = round(grouped_sn.mean()[\"Price\"], 2)\n",
+    "sn_total = grouped_sn.sum()[\"Price\"]\n",
+    "top_spenders = pd.DataFrame({\"Purchase Count\": sn_purchase, \"Average Purchase Price\": sn_average, \n",
+    "                             \"Total Purchase Value\": sn_total}).sort_values(by=\"Total Purchase Value\", ascending=False)\n",
+    "top_spenders.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -1495,6 +1650,22 @@
     "* Display a preview of the summary data frame\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = HeroesOfPymoli_data.loc[:, [\"Item ID\", \"Item Name\", \"Price\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
